app/styles/templates/_notification_link.scss
.all_unread_messages_count {
  position: absolute;
  right: 0px;
  z-index: 1000;
  height: 2rem;
  vertical-align: inherit;
  padding-top: 0.4rem;
  font-size: 1.3rem;
  width: 2rem;

  @media #{$small-only} {
    padding-top: 0.6rem;
    font-size: 1rem;
    width: 1.8rem;
  }

  span.unread {
    position: absolute;
    right: 0.2rem;
    margin-top: -0.3rem;

    @media #{$small-only} {
      margin-top: -0.4rem;
    }
  }
}

.right-small {
  margin-right: 4%;
  @media #{$small-only} {
    margin-right: 10%;
  }
}

